# dtu-ml-ops-project-template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cloudbuild.yaml  data.dvc  main.py  mnist  pyproject.toml  requirements.txt  trainer.dockerfile  trainer_gpu.dockerfile
.dvc/: config
.github/workflows/: codecheck.yml  tests.yml
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
dtu_mlops/bkhe0t23/checkpoints/: epoch=1-step=1564.ckpt
dtu_mlops/vx51gvny/checkpoints/: epoch=1-step=1564.ckpt
lightning_logs/version_0/: events.out.tfevents.1704732111.Mateusz.32506.0
lightning_logs/version_1/: events.out.tfevents.1704732795.Mateusz.34579.0
lightning_logs/version_2/: events.out.tfevents.1704733082.Mateusz.35574.0
lightning_logs/version_3/: events.out.tfevents.1704733107.Mateusz.35683.0
lightning_logs/version_4/: events.out.tfevents.1704733445.Mateusz.36708.0
lightning_logs/version_5/: events.out.tfevents.1704733664.Mateusz.39047.0
lightning_logs/version_6/: events.out.tfevents.1704735009.Mateusz.45679.0
models/: model.pt
sandbox/: requests_script.py
some_project/: __init__.py  predict_model.py  train_model.py
some_project/data/: make_dataset.py
some_project/models/: model.py
some_project/visualizations/: visualize.py
tests/: __init__.py  test_data.py
wandb/: latest-run
wandb/run-20240108_181650-vx51gvny/: run-vx51gvny.wandb
wandb/run-20240108_182902-xrcsju2i/: run-xrcsju2i.wandb
wandb/run-20240108_182926-bkhe0t23/: run-bkhe0t23.wandb
(+46 files in other folders)
