[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "some_project"
version = "0.0.1"
description = "Hope it works"
authors = [
  { name = "Mateuszek", email = "your@email.com" },
]

readme = "README.md"
requires-python = ">=3.11.5"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["some_project"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
select = ["I"]
